html tag for ver

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/public/engager.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="google-site-verification"
+      content="9_wyEPfBN1DZO03Prgb5OmCr-HrbDsHlQ6Xjp6NGaV8"
+    />
     <title>אנגייג׳ר - שיווק חכם בווטסאפ</title>
   </head>
   <body>
